# lidar_camera_calibration

./: CMakeLists.txt  LICENSE  README.md  package.xml
bagfiles/: README.md
calibration_data/camera_calibration/: ost.txt  ost.yaml
calibration_data/lidar_camera_calibration/: extrinsics.npz  img_corners.npy  pcl_corners.npy
launch/: camera_calibration.launch  display_camera_calibration.launch  display_camera_lidar_calibration.launch  play_rosbag.launch
scripts/: calibrate_camera_lidar.py  update_camera_info.py
