<?xml version="1.0"?>
<package format="2">
    
  <name>lidar_camera_calibration</name>
  <version>1.0.0</version>
  <description>The lidar_camera_calibration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="heethesh@cmu.edu">Heethesh Vhavle</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">http://github.com/heethesh/lidar_camera_calibration</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="heethesh@cmu.edu">Heethesh Vhavle</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>image_proc</build_export_depend>
  <build_export_depend>image_view</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
